# pactl-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: change_device_vol.rs  server_info.rs
src/controllers/: types.rs
