[package]
name = "pactl"
version = "0.4.0"
authors = ["Logan Hickok-Dickson <self@notquiteapex.net>"]
description = "A higher level API for libpulse-binding"
homepage = "https://github.com/NotQuiteApex/pactl"
documentation = "https://docs.rs/pactl"
repository = "https://github.com/NotQuiteApex/pactl"
keywords = ["pulse", "pulseaudio", "binding", "audio", "api"]
categories = ["api-bindings", "multimedia::audio"]
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["/.github/*"]
edition = "2018"

[lib]
name = "pactl"

[dependencies.pulse]
package = "libpulse-binding"
version = "2.29.0"
